--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2924,14 +2924,14 @@ Reduces weapon cooldowns by <cooldown_reduction>%",Lua/Outfit.lua(00446),,,,,,,,
 977,195189,Overkill <monster><buff>,Lua/QuestTypes.lua(00200),,,,,,,,絕殺<buff><monster>,,OK,,
 978,195189,Overkill <number> <monsters><buff> with <weapon>,Lua/QuestTypes.lua(00204),,,,,,,,使用<weapon>絕殺<number>隻<buff><monsters>,,OK,,
 979,195189,Overkill <number> <monsters><buff>,Lua/QuestTypes.lua(00206),,,,,,,,絕殺<number>隻<buff><monsters>,,OK,,
-980,199653,<text> with a single hit,Lua/QuestTypes.lua(00212),,,,,,,,只用一招<text>,,changed,,
-981,194283,<text> with Demon Powers,Lua/QuestTypes.lua(00215),,,,,,,,使用惡魔之力<text>,,OK,,
-982,194283,<text> with Bombs,Lua/QuestTypes.lua(00218),,,,,,,,使用炸彈<text>,,OK,,
-983,194283,<text> with Lava Creeper's death-blast,Lua/QuestTypes.lua(00222),,,,,,,,利用熔岩爬蛛的死亡爆炸<text>,,OK,,
-984,194283,<text> with Bombardier Spider's barrage attack,Lua/QuestTypes.lua(00224),,,,,,,,利用投彈蜘蛛的彈幕攻擊<text>,,OK,,
+980,199653,<text> with a single hit,Lua/QuestTypes.lua(00212),,,,,,,,只用一招<red></red><text>,,changed,,
+981,194283,<text> with Demon Powers,Lua/QuestTypes.lua(00215),,,,,,,,使用惡魔之力<red></red><text>,,OK,,
+982,194283,<text> with Bombs,Lua/QuestTypes.lua(00218),,,,,,,,使用炸彈<red></red><text>,,OK,,
+983,194283,<text> with Lava Creeper's death-blast,Lua/QuestTypes.lua(00222),,,,,,,,利用熔岩爬蛛的死亡爆炸<red></red><text>,,OK,,
+984,194283,<text> with Bombardier Spider's barrage attack,Lua/QuestTypes.lua(00224),,,,,,,,利用投彈蜘蛛的彈幕攻擊<red></red><text>,,OK,,
 985,194283,<text> Spawned by Other Monsters,Lua/QuestTypes.lua(00228),,,,,,,,<text>（由其他怪物生出的）,,OK,,
-986,194283,<text> With Ranged Attacks,Lua/QuestTypes.lua(00231),,,,,,,,使用遠程攻擊<text>,,OK,,
-987,194283,<text> With Melee Attacks,Lua/QuestTypes.lua(00233),,,,,,,,使用近戰攻擊<text>,,OK,,
+986,194283,<text> With Ranged Attacks,Lua/QuestTypes.lua(00231),,,,,,,,使用遠程攻擊<red></red><text>,,OK,,
+987,194283,<text> With Melee Attacks,Lua/QuestTypes.lua(00233),,,,,,,,使用近戰攻擊<red></red><text>,,OK,,
 988,194283,<text> While Above <health>% health,Lua/QuestTypes.lua(00236),,,,,,,,生命高於<health>%時，<red></red><text>,,OK,,
 989,194283,Slay <killed>/<total>,Lua/QuestTypes.lua(00298),,,,,,,,殺死<killed>/<total>,,OK,,
 991,194283,Slay <monster>,Lua/QuestTypes.lua(00386),,,,,,,,殺死<monster>,,OK,,
@@ -6008,7 +6008,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100350,28897,Press <UseRune1> to activate a Demon Power. You can hold <UseRune1> to aim the demon power,maps/Tutorial_Dungeon/scenario.lua(00174),,Scenario Tutorial_Dungeon Text,,,,,,按<UseRune1>施展惡魔之力。按住<UseRune1>可以進行瞄準。,,OK,,
 100351,28897,Press <LT> to activate a Demon Power. You can hold <LT> to aim the demon power,maps/Tutorial_Dungeon/scenario.lua(00175),,Scenario Tutorial_Dungeon GamepadText,,,,,,按<LT>施展惡魔之力。按住<LT>可以進行瞄準。,,OK,,
 100460,30340,Destroy the box!,maps/Tutorial_Dungeon/scenario.lua(00319),,Scenario Tutorial_Dungeon Text,,,,,,破壞箱子！,,OK,,
-3365,194283,"Zagoravia, the Fallen City. The land of no return.",Data/Scenario/Cutscene_texts.lua(00013),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,淪陷之城，扎古拉維亞。一個不歸之地。,,OK,,
+3365,194283,"Zagoravia, the Fallen City. The land of no return.",Data/Scenario/Cutscene_texts.lua(00013),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,扎古拉維亞，一座淪陷之城，一個不歸之地。,,OK,,
 3366,194283,Where darkness won and we demon hunters lost.,Data/Scenario/Cutscene_texts.lua(00017),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,在那裡，黑暗猖獗，獵魔人衰敗。,,OK,,
 3367,196015,"One year ago, a plea for help summoned hunters to Zagoravia.",Data/Scenario/Cutscene_texts.lua(00021),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,一年多前，一條求救訊息把獵人們號召到了扎古拉維亞。,,OK,,
 3368,196015,"I couldn't answer, I was trapped in the Tower of Dreams.",Data/Scenario/Cutscene_texts.lua(00025),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,當時我被困在夢境之塔，我無法回應。,,OK,,
@@ -6031,7 +6031,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 3329,194283,Who goes there?,Data/Scenario/Banters_Tutorial.lua(00083),Act0 01 Tutorial Banters,,Voice,Voice,,,,有人在嗎？,,OK,,
 3330,194283,Hello?,Data/Scenario/Banters_Tutorial.lua(00088),Act0 01 Tutorial Banters,,Voice,Voice,,,,哈囉？,,OK,,
 3331,194283,Can you hear me?,Data/Scenario/Banters_Tutorial.lua(00093),Act0 01 Tutorial Banters,,Voice,Voice,,,,聽得到嗎？,,OK,,
-3332,194283,A voice in my head? What else?,Data/Scenario/Banters_Tutorial.lua(00098),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,哪來的聲音？腦裡發出來的？,,OK,,
+3332,194283,A voice in my head? What else?,Data/Scenario/Banters_Tutorial.lua(00098),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,腦裡傳出的聲音？還是哪裡的？,,OK,,
 3333,194283,If you can hear me jump now!,Data/Scenario/Banters_Tutorial.lua(00102),Act0 01 Tutorial Banters,,Voice,Voice,,,,要是能聽到的話，就跳一下吧！,,OK,,
 3334,194283,"Come on! Jump, jump, jump, jump...",Data/Scenario/Banters_Tutorial.lua(00114),Act0 01 Tutorial Banters,,Voice,Voice,,,,快啊！跳！跳！跳！跳……,,OK,,
 3335,194283,"Ok, I give up!",Data/Scenario/Banters_Tutorial.lua(00125),Act0 01 Tutorial Banters,,Voice,Voice,,,,好吧，算了！,,OK,,
