--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -5902,7 +5902,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101074,32747,Masquerade of the Faceless...,maps/TheBastille/scenario.lua(01616),,Scenario TheBastille Text,,,,,,無面者的偽裝……,,OK,,
 101075,32747,Hearts of Fire & Ice...,maps/TheBastille/scenario.lua(01634),,Scenario TheBastille Text,,,,,,火之心和冰之心……,,OK,,
 101076,32747,...and the Scorching Ground-Dwellers,maps/TheBastille/scenario.lua(01652),,Scenario TheBastille Text,,,,,,……以及焦土的寄居者,,OK,,
-101077,32747,...and the Hive of the Dead,maps/TheBastille/scenario.lua(01670),,Scenario TheBastille Text,,,,,,……以及亡者巢穴,,OK,,
+101077,32747,...and the Hive of the Dead,maps/TheBastille/scenario.lua(01670),,Scenario TheBastille Text,,,,,,……以及亡者之巢,,OK,,
 101078,32747,...and the Devil Lake Creek Pestilence,maps/TheBastille/scenario.lua(01688),,Scenario TheBastille Text,,,,,,……以及魔鬼湖的瘟疫,,OK,,
 101079,32747,...and the Forest-fire's Furry,maps/TheBastille/scenario.lua(01706),,Scenario TheBastille Text,,,,,,……以及森林大火的恐怖,,OK,,
 101080,32747,...and the Theater of Pain,maps/TheBastille/scenario.lua(01724),,Scenario TheBastille Text,,,,,,……以及痛苦劇場,,OK,,
@@ -6018,7 +6018,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 3372,196015,Adrian is a friend. One of the precious few I have.,Data/Scenario/Cutscene_texts.lua(00041),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,艾德里安是我的同伴，我極少的知心好友之一。,,OK,,
 3373,194283,And the only man who knows of my past.,Data/Scenario/Cutscene_texts.lua(00045),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,也是唯一瞭解我過去的人。,,OK,,
 3374,196015,"Of the pact I made, and the demon powers I wield.",Data/Scenario/Cutscene_texts.lua(00049),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,知道我曾簽下契約，擁有惡魔之力。,,OK,,
-3375,194283,"Whatever haunts this cursed city,",Data/Scenario/Cutscene_texts.lua(00053),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,無論這座詛咒之城有什麼鬼怪，,,OK,,
+3375,194283,"Whatever haunts this cursed city,",Data/Scenario/Cutscene_texts.lua(00053),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,無論這座詛咒之城有什麼鬼怪作祟，,,OK,,
 3376,194283,I will face to find my friend.,Data/Scenario/Cutscene_texts.lua(00057),Act0 00 Cutscene 1: Intro ,,Victor Vran,Victor Vran,,,,我都會對抗，並找到我的朋友的。,,OK,,
 3321,194283,The city is eerily quiet.,Data/Scenario/Banters_Tutorial.lua(00015),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,這座城市出奇地安靜。,,OK,,
 3322,194283,Not a human soul in sight.,Data/Scenario/Banters_Tutorial.lua(00019),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,完全不見半點人影。,,OK,,
