--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2926,12 +2926,12 @@ Reduces weapon cooldowns by <cooldown_reduction>%",Lua/Outfit.lua(00446),,,,,,,,
 979,195189,Overkill <number> <monsters><buff>,Lua/QuestTypes.lua(00206),,,,,,,,絕殺<number>隻<buff><monsters>,,OK,,
 980,199653,<text> with a single hit,Lua/QuestTypes.lua(00212),,,,,,,,只用一招<red></red><text>,,changed,,
 981,194283,<text> with Demon Powers,Lua/QuestTypes.lua(00215),,,,,,,,使用惡魔之力<red></red><text>,,OK,,
-982,194283,<text> with Bombs,Lua/QuestTypes.lua(00218),,,,,,,,使用炸彈<red></red><text>,,OK,,
-983,194283,<text> with Lava Creeper's death-blast,Lua/QuestTypes.lua(00222),,,,,,,,利用熔岩爬蛛的死亡爆炸<red></red><text>,,OK,,
-984,194283,<text> with Bombardier Spider's barrage attack,Lua/QuestTypes.lua(00224),,,,,,,,利用投彈蜘蛛的彈幕攻擊<red></red><text>,,OK,,
+982,194283,<text> with Bombs,Lua/QuestTypes.lua(00218),,,,,,,,使用炸彈<text>,,OK,,
+983,194283,<text> with Lava Creeper's death-blast,Lua/QuestTypes.lua(00222),,,,,,,,利用熔岩爬蛛的死亡爆炸<text>,,OK,,
+984,194283,<text> with Bombardier Spider's barrage attack,Lua/QuestTypes.lua(00224),,,,,,,,利用投彈蜘蛛的彈幕攻擊<text>,,OK,,
 985,194283,<text> Spawned by Other Monsters,Lua/QuestTypes.lua(00228),,,,,,,,<text>（由其他怪物生出的）,,OK,,
-986,194283,<text> With Ranged Attacks,Lua/QuestTypes.lua(00231),,,,,,,,使用遠程攻擊<red></red><text>,,OK,,
-987,194283,<text> With Melee Attacks,Lua/QuestTypes.lua(00233),,,,,,,,使用近戰攻擊<red></red><text>,,OK,,
+986,194283,<text> With Ranged Attacks,Lua/QuestTypes.lua(00231),,,,,,,,使用遠程攻擊<text>,,OK,,
+987,194283,<text> With Melee Attacks,Lua/QuestTypes.lua(00233),,,,,,,,使用近戰攻擊<text>,,OK,,
 988,194283,<text> While Above <health>% health,Lua/QuestTypes.lua(00236),,,,,,,,生命高於<health>%時，<red></red><text>,,OK,,
 989,194283,Slay <killed>/<total>,Lua/QuestTypes.lua(00298),,,,,,,,殺死<killed>/<total>,,OK,,
 991,194283,Slay <monster>,Lua/QuestTypes.lua(00386),,,,,,,,殺死<monster>,,OK,,
