岩石怪 => 巨岩怪

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -1109,7 +1109,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 4542,199130,Slay Soul of Black with a demon power without dying,Data/MapChallenges.lua(04702),,,,,,,,在沒有死亡的情況下，<red></red>使用惡魔之力殺死黑魂,,OK,,
 4543,199130,Slay Sion without dying with Hex of Malice and Hex of Tenacity,Data/MapChallenges.lua(04718),,,,,,,,在沒有死亡的情況下，<red></red>殺死賽恩，<red></red>同時啟用<red></red>殺意禁咒和<red></red>剛韌禁咒,,OK,,
 4544,199130,Slay Ambition without dying with 5 active Hexes,Data/MapChallenges.lua(04732),,,,,,,,在沒有死亡的情況下，<red></red>殺死安畢遜，<red></red>同時啟用5個禁咒,,OK,,
-4545,199130,Slay Monster of Rock without dying while it is affected by Daze,Data/MapChallenges.lua(04745),,,,,,,,在沒有死亡的情況下，<red></red>殺死暈眩狀態的岩石怪,,OK,,
+4545,199130,Slay Monster of Rock without dying while it is affected by Daze,Data/MapChallenges.lua(04745),,,,,,,,在沒有死亡的情況下，<red></red>殺死暈眩狀態的巨岩怪,,OK,,
 4546,199130,Slay the Pax Magica while above 30% health with Hex of Time,Data/MapChallenges.lua(04759),,,,,,,,生命高於30%時，<red></red>殺死魔法帕克斯，<red></red>同時啟用<red></red>時間禁咒,,OK,,
 4547,199130,Slay HATRED and ANGST with a Scythe without dying,Data/MapChallenges.lua(04772),,,,,,,,在沒有死亡的情況下，<red></red>使用巨鐮殺死憎恨和焦慮,,OK,,
 4610,199130,Slay Cardinal Bleak with a Shotgun with Hex of Malice without dying,Data/MapChallenges.lua(04787),,,,,,,,在沒有死亡的情況下，<red></red>使用霰彈槍殺死紅衣主教．布里克，<red></red>同時啟用<red></red>殺意禁咒,,OK,,
@@ -5723,7 +5723,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100895,32747,Black Wing Vigilante ,maps/TheBastille/objects.lua(77618),,,,,,,,黑翼義警,,OK,,
 100896,32747,Sion,maps/TheBastille/objects.lua(77752),,,,,,,,賽恩,,OK,,
 100897,32747,Vivid,maps/TheBastille/objects.lua(77796),,,,,,,,維維德,,OK,,
-100898,32747,Monster of Rock,maps/TheBastille/objects.lua(77815),,,,,,,,岩石怪,,OK,,
+100898,32747,Monster of Rock,maps/TheBastille/objects.lua(77815),,,,,,,,巨岩怪,,OK,,
 100899,32747,Black Wing Vigilante ,maps/TheBastille/objects.lua(77978),,,,,,,,黑翼義警,,OK,,
 100900,32747,ANGST,maps/TheBastille/objects.lua(78343),,,,,,,,焦慮,,OK,,
 100901,32747,Precision Bomber,maps/TheBastille/objects.lua(80819),,,,,,,,精準炸彈蛛,,OK,,
@@ -5868,7 +5868,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101040,32747,...and the Black Friday Stampede,maps/TheBastille/scenario.lua(00852),,Scenario TheBastille Text,,,,,,……以及黑色星期五狂潮,,OK,,
 101041,32747,The Black Wing Vigilantes... ,maps/TheBastille/scenario.lua(00908),,Scenario TheBastille Text,,,,,,黑翼義警隊……,,OK,,
 101042,32747,Ambition Stoneheart...,maps/TheBastille/scenario.lua(00926),,Scenario TheBastille Text,,,,,,石之心．安畢遜……,,OK,,
-101043,32747,The Monster of Rock...,maps/TheBastille/scenario.lua(00944),,Scenario TheBastille Text,,,,,,岩石怪……,,OK,,
+101043,32747,The Monster of Rock...,maps/TheBastille/scenario.lua(00944),,Scenario TheBastille Text,,,,,,巨岩怪……,,OK,,
 101044,32747,Pax Magica...,maps/TheBastille/scenario.lua(00962),,Scenario TheBastille Text,,,,,,魔法帕克斯……,,OK,,
 101045,32747,The Obsidian Malevolence... ,maps/TheBastille/scenario.lua(00980),,Scenario TheBastille Text,,,,,,惡意黑曜石……,,OK,,
 101046,33188,...and the Rogue Firing Squad,maps/TheBastille/scenario.lua(00998),,Scenario TheBastille Text,,,32747,,,……以及強盜火槍隊,,changed,,
