--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -3369,10 +3369,10 @@ Recipe: <rune_icon_1><rune_icon_2><rune_icon_3>",Lua/Transmutation.lua(00236),,,
 4674,199933,Eat it,Lua/UI/BaseInventory.lua(01159),,,,,0,,,吃掉,,new,,
 1140,194283,<name> travelled to <map_name>,Lua/UI/ChatDlg.lua(00448),,,,,,,,<name>已前往<map_name>,,OK,,
 1141,194283,Player <name> joined the game,Lua/UI/ChatDlg.lua(00457),,,,,,,,玩家<name>已加入遊戲,,OK,,
-1142,194283,Friend invitation from <name> ,Lua/UI/ChatDlg.lua(00464),,,,,,,,來自<name>的好友邀請,,OK,,
+1142,194283,Friend invitation from <name> ,Lua/UI/ChatDlg.lua(00464),,,,,,,,<name>送來好友邀請,,OK,,
 4470,198919,Friend Invitation,Lua/UI/ChatDlg.lua(00471),,,,,,,,好友邀請,,OK,,
 4471,199653,Are you sure you want to accept the friend invitation from <name>?,Lua/UI/ChatDlg.lua(00471),,,,,198919,,,你確定要接受<name>的好友邀請嗎？,,changed,,
-1143,194283,Game invitation from <name>,Lua/UI/ChatDlg.lua(00482),,,,,,,,來自<name>的遊戲邀請,,OK,,
+1143,194283,Game invitation from <name>,Lua/UI/ChatDlg.lua(00482),,,,,,,,<name>送來遊戲邀請,,OK,,
 4472,198919,Game Invitation,Lua/UI/ChatDlg.lua(00487),,,,,,,,遊戲邀請,,OK,,
 4473,199653,Are you sure you want to accept the game invitation from <name>?,Lua/UI/ChatDlg.lua(00487),,,,,198919,,,你確定要接受<name>的遊戲邀請嗎？,,changed,,
 1144,194283,Player <name> left the game,Lua/UI/ChatDlg.lua(00495),,,,,,,,玩家<name>已離開遊戲,,OK,,
