加上時間單位

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2837,8 +2837,8 @@ Reduces weapon cooldowns by <cooldown_reduction>%",Lua/Outfit.lua(00446),,,,,,,,
 4244,197203,Use in Transmutation to improve the divine property of a destiny card or to add a divine property to a normal destiny card,Lua/PowerStone.lua(00160),,,,,,,,用於合成可提升命運牌的神聖屬性，或附加神聖屬性至普通命運牌。,,OK,,
 4245,197203,Power Stone of Wickedness,Lua/PowerStone.lua(00167),,,,,,,,邪惡能量石,,OK,,
 4246,197203,Use in Transmutation to improve the wicked property of a destiny card or to add a wicked property to a normal destiny card,Lua/PowerStone.lua(00168),,,,,,,,用於合成可提升命運牌的邪惡屬性，或附加邪惡屬性至普通命運牌。,,OK,,
-913,194283,<event> in <remaining>,Lua/PvPArena.lua(00350),,,,,,,,<remaining>後<event>,,OK,,
-914,194283,Respawning in <remaining>,Lua/PvPArena.lua(00479),,,,,,,,<remaining>後重生,,OK,,
+913,194283,<event> in <remaining>,Lua/PvPArena.lua(00350),,,,,,,,<remaining>秒後<event>,,OK,,
+914,194283,Respawning in <remaining>,Lua/PvPArena.lua(00479),,,,,,,,<remaining>秒後重生,,OK,,
 915,194283,Counting,Lua/PvPArena.lua(00524),,,,,,,,計時,,OK,,
 916,194283,SkeletonSwarm,Lua/PvPArena.lua(00546),,,,,,,,骷髏群集,,OK,,
 917,194283,Demon Spawn,Lua/PvPArena.lua(00555),,,,,,,,惡魔降臨,,OK,,
@@ -3273,7 +3273,7 @@ Recipe: <rune_icon_1><rune_icon_2><rune_icon_3>",Lua/Transmutation.lua(00236),,,
 100364,29744,Transmutation,Lua/TransmutationInteractable.lua(00012),,,,,,,,合成,,OK,,
 733,194283,Required Level: <number>,Lua/TransmutationInteractable.lua(00043),,,,,,,,需求等級：<number>,,OK,,
 4204,196416,This is a secret achievement,Lua/UI/Achievements.lua(00053),,,,,,,,這是一個祕密成就。,,OK,,
-4188,196645,Next round starts in <time>,Lua/UI/ArenaRanking.lua(00030),,,,,,,,下一輪將於<time>後開始。,,OK,,
+4188,196645,Next round starts in <time>,Lua/UI/ArenaRanking.lua(00030),,,,,,,,下一輪將於<time>秒後開始。,,OK,,
 4187,196416,Ranking,Lua/UI/ArenaRanking.lua(00039),,,,,,,,排名,,OK,,
 4210,196645,Player,Lua/UI/ArenaRanking.lua(00040),,,,,,,,玩家,,OK,,
 4190,196416,Kills,Lua/UI/ArenaRanking.lua(00041),,,,,,,,擊殺數,,OK,,
@@ -3507,7 +3507,7 @@ Note: Playing in Hard Mode is not recommended for your first character.",Lua/UI/
 3539,194708,<gray_hint><description></gray_hint>,Lua/UI/HeadsUpDisplay.lua(01866),,,,,,,,<gray_hint><description></gray_hint>,,OK,,
 4007,195716,<center><description>,Lua/UI/HeadsUpDisplay.lua(01871),,,,,,,,<center><description>,,OK,,
 4482,198919,Your character has died and lost his Hardcore status.,Lua/UI/HeroDeathDlg.lua(00039),,,,,,,,你的角色已經死亡，且失去硬漢身分。,,OK,,
-1208,194283,Respawning in <remaining>,Lua/UI/HeroDeathDlg.lua(00052),,,,,,,,<remaining>後重生,,OK,,
+1208,194283,Respawning in <remaining>,Lua/UI/HeroDeathDlg.lua(00052),,,,,,,,<remaining>秒後重生,,OK,,
 4183,196416,"If you want to play with gamepad, you can change the control scheme from the Options menu.",Lua/UI/InGameInterface.lua(00109),,,,,,,,如果想用手把遊玩，你可以在選項選單中變更操作方式。,,OK,,
 4184,196416,"If you want to play with keyboard and mouse, you can change the control scheme from the Options menu.",Lua/UI/InGameInterface.lua(00120),,,,,,,,如果想用鍵盤和滑鼠遊玩，你可以在選項選單中變更操作方式。,,OK,,
 1209,194283,Inventory,Lua/UI/InGameMainMenu.lua(00022),,,,,,,,物品欄,,OK,,
