修改 5 把星際大戰的光劍名稱

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2438,11 +2438,11 @@ Tag <UseDefaultEmote> not present in original text",
 4381,198395,<purple>Dimension Wave leaves a trail of flame that damages foes</purple>,Lua/LootWeapon.lua(00918),,,,,,,,<purple>次元波會留下一道火痕以傷害敵人。</purple>,,OK,,
 3974,195716,Kladenets,Lua/LootWeapon.lua(01027),,,,,,,,克萊德奈茲劍,,OK,,
 3975,195716,Shard,Lua/LootWeapon.lua(01043),,,,,,,,碎刃劍,,OK,,
-710,194283,The Betrayer,Lua/LootWeapon.lua(01067),,,,,,,,背叛劍,,OK,,
-711,194283,The Master,Lua/LootWeapon.lua(01080),,,,,,,,主宰劍,,OK,,
-712,194283,The Consular,Lua/LootWeapon.lua(01093),,,,,,,,領事劍,,OK,,
-713,194283,The Guardian,Lua/LootWeapon.lua(01107),,,,,,,,守護劍,,OK,,
-714,194283,The Sentinel,Lua/LootWeapon.lua(01120),,,,,,,,巡哨劍,,OK,,
+710,194283,The Betrayer,Lua/LootWeapon.lua(01067),,,,,,,,絕地叛徒劍,,OK,,
+711,194283,The Master,Lua/LootWeapon.lua(01080),,,,,,,,絕地大師劍,,OK,,
+712,194283,The Consular,Lua/LootWeapon.lua(01093),,,,,,,,絕地領事劍,,OK,,
+713,194283,The Guardian,Lua/LootWeapon.lua(01107),,,,,,,,絕地衛士劍,,OK,,
+714,194283,The Sentinel,Lua/LootWeapon.lua(01120),,,,,,,,絕地哨兵劍,,OK,,
 715,194283,Lady Luck,Lua/LootWeapon.lua(01131),,,,,,,,幸運女神劍,,OK,,
 716,194283,Storm,Lua/LootWeapon.lua(01146),,,,,,,,暴風劍,,OK,,
 717,194283,Shackles,Lua/LootWeapon.lua(01161),,,,,,,,枷鎖劍,,OK,,
