--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -580,8 +580,8 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 2061,194283,Had 100 monsters being killed by their peers,Data/Achievement.lua(00317),,Achievement Utilizer description,,,,,,已使100隻怪物被同伴殺死。,,OK,,
 2062,194283,Have 100 monsters being killed by their peers,Data/Achievement.lua(00318),,Achievement Utilizer how_to,,,,,,使100隻怪物被同伴殺死。,,OK,,
 2066,194283,Foursome,Data/Achievement.lua(00326),,Achievement Foursome display_name,,,,,,四人小隊,,OK,,
-2067,194283,Defeated Adrian The Fallen with a party of 4 in multiplayer,Data/Achievement.lua(00327),,Achievement Foursome description,,,,,,已在多人遊戲中以四人小隊擊敗墮落者艾德里安。,,OK,,
-2068,194283,Defeat Adrian The Fallen with a party of 4 in multiplayer,Data/Achievement.lua(00328),,Achievement Foursome how_to,,,,,,在多人遊戲中以四人小隊擊敗墮落者艾德里安。,,OK,,
+2067,194283,Defeated Adrian The Fallen with a party of 4 in multiplayer,Data/Achievement.lua(00327),,Achievement Foursome description,,,,,,已在多人遊戲中以四人小隊擊敗墮落者．艾德里安。,,OK,,
+2068,194283,Defeat Adrian The Fallen with a party of 4 in multiplayer,Data/Achievement.lua(00328),,Achievement Foursome how_to,,,,,,在多人遊戲中以四人小隊擊敗墮落者．艾德里安。,,OK,,
 2069,194283,Magellan Vran,Data/Achievement.lua(00338),,Achievement Magellan Vran display_name,,,,,,探險家弗蘭,,OK,,
 2070,194283,Set foot in every area in the game,Data/Achievement.lua(00339),,Achievement Magellan Vran description,,,,,,已踏遍遊戲中的每個區域。,,OK,,
 2071,194283,Set foot in every area in the game,Data/Achievement.lua(00340),,Achievement Magellan Vran how_to,,,,,,踏遍遊戲中的每個區域。,,OK,,
@@ -3391,12 +3391,12 @@ Recipe: <rune_icon_1><rune_icon_2><rune_icon_3>",Lua/Transmutation.lua(00236),,,
 1154,194283,Accept,Lua/UI/ChatDlg.lua(01092),,,,,,,,接受,,OK,,
 4476,198919,Keyboard,Lua/UI/ChatDlg.lua(01106),,,,,,,,鍵盤,,OK,,
 1155,194283,Send,Lua/UI/ChatDlg.lua(01118),,,,,,,,發送,,OK,,
-1156,194283,Up,Lua/UI/ChatDlg.lua(01128),,,,,,,,上,,OK,,
-1157,194283,Down,Lua/UI/ChatDlg.lua(01138),,,,,,,,下,,OK,,
+1156,194283,Up,Lua/UI/ChatDlg.lua(01128),,,,,,,,向上,,OK,,
+1157,194283,Down,Lua/UI/ChatDlg.lua(01138),,,,,,,,向下,,OK,,
 4373,198395,Type a message...,Lua/UI/ChatDlg.lua(01153),,,,,,,,輸入訊息……,,OK,,
 4477,198919,Steam virtual keyboard requires Steam Big Picture Mode to be enabled. Please restart the game from Big Picture Mode in order to use the Steam virtual keyboard.,Lua/UI/ChatDlg.lua(01156),,,,,,,,Steam虛擬鍵盤需要Big Picture模式才能啟用。請使用Big Picture模式重啟遊戲以啟用Steam虛擬鍵盤。,,OK,,
-4478,198919,<clr_pref>to <name><clr_suff>: <chat_log><msg></chat_log>,Lua/UI/ChatDlg.lua(01247),,,,,,,,<clr_pref>收件者<name><clr_suff>：<chat_log><msg></chat_log>,,OK,,
-4479,198919,<clr_pref>from <name><clr_suff>: <chat_log><msg></chat_log>,Lua/UI/ChatDlg.lua(01249),,,,,,,,<clr_pref>寄件者<name><clr_suff>：<chat_log><msg></chat_log>,,OK,,
+4478,198919,<clr_pref>to <name><clr_suff>: <chat_log><msg></chat_log>,Lua/UI/ChatDlg.lua(01247),,,,,,,,<clr_pref>發給<name>的私訊<clr_suff>：<chat_log><msg></chat_log>,,OK,,
+4479,198919,<clr_pref>from <name><clr_suff>: <chat_log><msg></chat_log>,Lua/UI/ChatDlg.lua(01249),,,,,,,,<clr_pref>來自<name>的私訊<clr_suff>：<chat_log><msg></chat_log>,,OK,,
 1158,198919,<chat_color><name></chat_color>: <chat_color><msg></chat_color>,Lua/UI/ChatDlg.lua(01252),,,,,,,,<chat_color><name></chat_color>：<chat_color><msg></chat_color>,,OK,,
 1159,194283,<clr><name></color>: <chat_log><msg></chat_log>,Lua/UI/ChatDlg.lua(01255),,,,,,,,<clr><name></color>：<chat_log><msg></chat_log>,,OK,,
 1160,194283,<chat_color><msg></chat_color>,Lua/UI/ChatDlg.lua(01259),,,,,,,,<chat_color><msg></chat_color>,,OK,,
