--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -1133,7 +1133,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 4566,199130,Slay the Leather Boys with a Shotgun with Hex of Malice and Hex of Tenacity,Data/MapChallenges.lua(05039),,,,,,,,使用霰彈槍殺死皮衣男，<red></red>同時啟用<red></red>殺意禁咒和<red></red>剛韌禁咒,,OK,,
 4567,199130,Slay the Dealer with a Hammer with Hex of Tenacity,Data/MapChallenges.lua(05052),,,,,,,,使用戰鎚殺死交易者，<red></red>同時啟用<red></red>剛韌禁咒,,OK,,
 4568,199130,Slay the Gate Keeper with Bombardier Spider's barrage attack without dying,Data/MapChallenges.lua(05066),,,,,,,,在沒有死亡的情況下，<red></red>利用投彈蜘蛛的彈幕攻擊殺死守門人,,OK,,
-4569,199130,Slay Adath with a Lightning Gun while above 50% Health,Data/MapChallenges.lua(05079),,,,,,,,生命高於50%時，<red></red>使用閃電槍殺死阿妲斯,,OK,,
+4569,199130,Slay Adath with a Lightning Gun while above 50% Health,Data/MapChallenges.lua(05079),,,,,,,,生命高於50%時，<red></red>使用閃電槍殺死亞坦司,,OK,,
 4570,199130,Slay the Master of the Balls with 5 active Hexes without dying,Data/MapChallenges.lua(05095),,,,,,,,在沒有死亡的情況下，<red></red>殺死球王，<red></red>同時啟用5個禁咒,,OK,,
 4571,199130,Slay Vex the Uninvited while it is affected by Enraged,Data/MapChallenges.lua(05107),,,,,,,,殺死憤怒狀態的不速之客．維克斯,,OK,,
 4572,199130,Slay the Creeping Chaos with a Bomb with Hex of Time and Hex of Pain,Data/MapChallenges.lua(05122),,,,,,,,使用炸彈殺死伏行混沌，<red></red>同時啟用<red></red>時間禁咒和<red></red>疼痛禁咒,,OK,,
