--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -4106,8 +4106,8 @@ Check your Codex to see the standard recipes. Some recipes are secret and will n
 4432,198395,Rainbow Spider,Lua/Units/CauldronRainbowSpider.lua(00006),,|gender,,,,,,彩虹蜘蛛,M,OK,,
 4433,198395,Rainbow Spiders,Lua/Units/CauldronRainbowSpider.lua(00007),,,,,,,,彩虹蜘蛛,,OK,,
 4505,198919,Beam Attack - Crippling Jump - Armor Penetration,Lua/Units/CauldronRainbowSpider.lua(00008),,,,,,,,光束攻擊、致癱跳、護甲穿透,,OK,,
-4434,198395,Shadow Soul,Lua/Units/CauldronShadowBanshee.lua(00004),,|gender,,,,,,影魂,M,OK,,
-4435,198395,Shadow Souls,Lua/Units/CauldronShadowBanshee.lua(00005),,,,,,,,影魂,,OK,,
+4434,198395,Shadow Soul,Lua/Units/CauldronShadowBanshee.lua(00004),,|gender,,,,,,暗影之魂,M,OK,,
+4435,198395,Shadow Souls,Lua/Units/CauldronShadowBanshee.lua(00005),,,,,,,,暗影之魂,,OK,,
 4506,198919,Charges - Barrage - Armor Penetration,Lua/Units/CauldronShadowBanshee.lua(00006),,,,,,,,衝鋒、彈幕、護甲穿透,,OK,,
 4436,198395,Shadow Spider,Lua/Units/CauldronShadowBanshee.lua(00121),,|gender,,,,,,暗影蜘蛛,M,OK,,
 4437,198395,Shadow Spiders,Lua/Units/CauldronShadowBanshee.lua(00122),,,,,,,,暗影蜘蛛,,OK,,
@@ -5948,7 +5948,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101120,32747,...and the Iridescent Cellar,maps/TheBastille/scenario.lua(02612),,Scenario TheBastille Text,,,,,,……以及彩虹地窖,,OK,,
 101121,32747,...and Those Blasted Pests,maps/TheBastille/scenario.lua(02630),,Scenario TheBastille Text,,,,,,……以及那些該死的害蟲,,OK,,
 101122,32747,Marie of the Bayou...,maps/TheBastille/scenario.lua(02686),,Scenario TheBastille Text,,,,,,河口的瑪麗……,,OK,,
-101123,32747,The Forsaken in the Marsh...,maps/TheBastille/scenario.lua(02704),,Scenario TheBastille Text,,,,,,遺忘在沼澤之物……,,OK,,
+101123,32747,The Forsaken in the Marsh...,maps/TheBastille/scenario.lua(02704),,Scenario TheBastille Text,,,,,,被遺棄在沼澤之物……,,OK,,
 101124,32747,Lord of the Swamp...,maps/TheBastille/scenario.lua(02722),,Scenario TheBastille Text,,,,,,沼澤領主……,,OK,,
 101125,32747,The Plague Incarnate...,maps/TheBastille/scenario.lua(02740),,Scenario TheBastille Text,,,,,,瘟疫化身……,,OK,,
 101126,32747,The Fisher From Outside...,maps/TheBastille/scenario.lua(02758),,Scenario TheBastille Text,,,,,,域外釣客……,,OK,,
