--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -4923,8 +4923,8 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100134,28897,Chamber of Shadows,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(01055),,,,,,,,暗影墓室,,OK,,
 100135,28897,Screeching Calamity,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(01338),,,,,,,,狂嘯之厄,,OK,,
 100136,28897,The Archivist,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(02725),,,,,,,,文獻管理者,,OK,,
-100137,28897,Pull Candle,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(03913),,,,,,,,扳蠟燭,,OK,,
-100138,28897,Pull Candle,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(04172),,,,,,,,扳蠟燭,,OK,,
+100137,28897,Pull Candle,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(03913),,,,,,,,扳燭臺,,OK,,
+100138,28897,Pull Candle,maps/PoorNeighborhood_BansheeMiniBoss/objects.lua(04172),,,,,,,,扳燭臺,,OK,,
 100139,28897,Start,maps/PoorNeighborhood_Cave/objects.lua(00716),,,,,,,,開始,,OK,,
 100140,28897,Juliet,maps/PoorNeighborhood_Cellar2/objects.lua(02574),,,,,,,,朱麗葉,,OK,,
 100141,28897,Chamber of Decay,maps/PoorNeighborhood_Dungeon/objects.lua(05950),,,,,,,,腐朽墓室,,OK,,
