--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2407,7 +2407,7 @@ Tag <UseDefaultEmote> not present in original text",
 3963,196416,<purple>Fast rate of fire. Grenades inflict less damage and bounce more times</purple>,Lua/LootWeapon.lua(00646),,,,,,,,<purple>提升射擊頻率。榴彈傷害降低但彈跳更多次。</purple>,,OK,,
 3964,195716,<purple>Bouncing Betty fires three exploding chickens instead of a single granade but also fires less often</purple>,Lua/LootWeapon.lua(00654),,,,,,,,<purple>彈跳彈會一次射出三隻爆裂小雞以取代榴彈，但射擊頻率降低。</purple>,,OK,,
 3965,195942,<purple>Oil Spill attack (replaces Fire Lake) creates a pool of oil which causes Daze on hit and can be ignited by other mortar attacks.</purple>,Lua/LootWeapon.lua(00662),,,,,,,,<purple>潑油彈會取代火海彈噴出一灘油，擊中時會造成暈眩，還能用炮擊點燃。</purple>,,OK,,
-701,194283,"<purple>Basic attack fires a powerful, slow moving projectile</purple>",Lua/LootWeapon.lua(00670),,,,,,,,<purple>基本攻擊會射出一枚強力但緩慢的投射物。</purple>,,OK,,
+701,194283,"<purple>Basic attack fires a powerful, slow moving projectile</purple>",Lua/LootWeapon.lua(00670),,,,,,,,<purple>基本攻擊會射出一枚強力但緩慢的榴彈。</purple>,,OK,,
 702,194283,<purple>Charge attack leaves a trail of fire</purple>,Lua/LootWeapon.lua(00679),,,,,,,,<purple>衝鋒刺會留下一道火痕。</purple>,,OK,,
 703,194283,<purple>Grants additional Charge use without triggering a cooldown</purple>,Lua/LootWeapon.lua(00687),,,,,,,,<purple>獲得不需冷卻的額外衝鋒刺。</purple>,,OK,,
 4031,195942,<purple>The Coup De Grace attack fires a piercing projectile that pushes back foes</purple>,Lua/LootWeapon.lua(00695),,,,,,,,<purple>致命恩刺會射出銳利的投射物震退敵人。</purple>,,OK,,
@@ -2453,7 +2453,7 @@ Tag <UseDefaultEmote> not present in original text",
 721,194283,Meteor,Lua/LootWeapon.lua(01247),,,,,,,,隕石鎚,,OK,,
 3977,195716,Boomer,Lua/LootWeapon.lua(01275),,,,,,,,爆裂炮,,OK,,
 3978,195942,Chicken Cannon,Lua/LootWeapon.lua(01290),,,,,,,,小雞加農炮,,OK,,
-3979,195716,Oil Shooter,Lua/LootWeapon.lua(01305),,,,,,,,噴油炮,,OK,,
+3979,195716,Oil Shooter,Lua/LootWeapon.lua(01305),,,,,,,,燃油炮,,OK,,
 722,194283,Bertram,Lua/LootWeapon.lua(01320),,,,,,,,伯特倫炮,,OK,,
 723,194283,Chimera,Lua/LootWeapon.lua(01338),,,,,,,,奇美拉炮,,OK,,
 3980,195716,Reanimator,Lua/LootWeapon.lua(01360),,,,,,,,回魂槍,,OK,,
