--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -5873,7 +5873,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101045,32747,The Obsidian Malevolence... ,maps/TheBastille/scenario.lua(00980),,Scenario TheBastille Text,,,,,,惡意黑曜石……,,OK,,
 101046,33188,...and the Rogue Firing Squad,maps/TheBastille/scenario.lua(00998),,Scenario TheBastille Text,,,32747,,,……以及強盜火槍隊,,changed,,
 101047,32747,...and the Carnival of Futility,maps/TheBastille/scenario.lua(01016),,Scenario TheBastille Text,,,,,,……以及無趣的嘉年華,,OK,,
-101048,32747,...and the Sacks of Curious Critters,maps/TheBastille/scenario.lua(01034),,Scenario TheBastille Text,,,,,,……以及好奇的小生物,,OK,,
+101048,32747,...and the Sacks of Curious Critters,maps/TheBastille/scenario.lua(01034),,Scenario TheBastille Text,,,,,,……以及好奇小生物之巢,,OK,,
 101049,32747,...and the Bloated Blasphemies,maps/TheBastille/scenario.lua(01052),,Scenario TheBastille Text,,,,,,……以及傲慢褻瀆者,,OK,,
 101050,32747,...and the East-End Wailers ,maps/TheBastille/scenario.lua(01070),,Scenario TheBastille Text,,,,,,……以及東區慟哭者,,OK,,
 101051,32747,"Bleak, the Corrupted Cardinal...",maps/TheBastille/scenario.lua(01126),,Scenario TheBastille Text,,,,,,墮落的紅衣主教．布里克……,,OK,,
@@ -5930,7 +5930,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101102,32747,The Mud-Lands Tyrant...,maps/TheBastille/scenario.lua(02258),,Scenario TheBastille Text,,,,,,沼地暴君……,,OK,,
 101103,32747,Pleasure & Pain...,maps/TheBastille/scenario.lua(02276),,Scenario TheBastille Text,,,,,,愉悅和痛苦……,,OK,,
 101104,32747,Don't Kill Bill (3 times!)...,maps/TheBastille/scenario.lua(02294),,Scenario TheBastille Text,,,,,,別殺比爾（3次！）……,,OK,,
-101105,32747,...bad idea...,maps/TheBastille/scenario.lua(02304),,Scenario TheBastille Text,,,,,,……爛點子……,,OK,,
+101105,32747,...bad idea...,maps/TheBastille/scenario.lua(02304),,Scenario TheBastille Text,,,,,,……餿主意……,,OK,,
 101106,32747,Will of the Storms...,maps/TheBastille/scenario.lua(02322),,Scenario TheBastille Text,,,,,,雹暴的意志……,,OK,,
 101107,32747,...and the Drove of the Undying,maps/TheBastille/scenario.lua(02340),,Scenario TheBastille Text,,,,,,……以及不死之眾,,OK,,
 101108,32747,...and the Gates of Energy,maps/TheBastille/scenario.lua(02358),,Scenario TheBastille Text,,,,,,……以及能量之門,,OK,,
@@ -5944,7 +5944,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101116,32747,Lady Ruth...,maps/TheBastille/scenario.lua(02540),,Scenario TheBastille Text,,,,,,露絲女士……,,OK,,
 101117,32747,...and the Slimy Fever,maps/TheBastille/scenario.lua(02558),,Scenario TheBastille Text,,,,,,……以及黏液狂熱,,OK,,
 101118,32747,...and the Growing Stones,maps/TheBastille/scenario.lua(02576),,Scenario TheBastille Text,,,,,,……以及發育石,,OK,,
-101119,32747,...and the Amorphous Chargers,maps/TheBastille/scenario.lua(02594),,Scenario TheBastille Text,,,,,,……以及無定形衝鋒者,,OK,,
+101119,32747,...and the Amorphous Chargers,maps/TheBastille/scenario.lua(02594),,Scenario TheBastille Text,,,,,,……以及無形衝鋒者,,OK,,
 101120,32747,...and the Iridescent Cellar,maps/TheBastille/scenario.lua(02612),,Scenario TheBastille Text,,,,,,……以及彩虹地窖,,OK,,
 101121,32747,...and Those Blasted Pests,maps/TheBastille/scenario.lua(02630),,Scenario TheBastille Text,,,,,,……以及那些該死的害蟲,,OK,,
 101122,32747,Marie of the Bayou...,maps/TheBastille/scenario.lua(02686),,Scenario TheBastille Text,,,,,,河口的瑪麗……,,OK,,
